add email functionality
